Client - Did other part of registration methods and added first exceptions